Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71406

Editable ComboBox text is not selectable with the mouse.

XMLWordPrintable

    • Android, Linux/X11, Windows
    • 0425562e14e41b62dc7631c7c02768b8294454d0 (qt/qtquickcontrols2/5.15)

      On Windows the editable text of a ComboBox is not selectable with the mouse. But it can be selected with the keyboard (Ctrl+A, Shift +or arrow keys).

      ComboBox {
      	editable: true
      	model: searchHistory
      	editText: lastSearchTerm
      	anchors.verticalCenter: parent.verticalCenter
      }
      

        For Gerrit Dashboard: QTBUG-71406
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            DanielSt Peter Staab
            Votes:
            4 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes