ComboBox: add selectTextByMouse property

Allows configuring the selectByMouse property of the underlying
TextField for editable combo boxes.

Named selectTextByMouse instead of selectByMouse to avoid confusion
with selection of the items themselves.

[ChangeLog][Controls][ComboBox] Added selectTextByMouse property.

Change-Id: I852e4cd44ebe6b2a1ed2535513ea2fc35cbe0a32
Fixes: QTBUG-71406
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>