tests/auto/controls/data/tst_combobox.qml
@@ -1853,4 +1853,20 @@ TestCase {
         closedSpy.wait()
         compare(closedSpy.count, 1)
     }
+
+    function test_comboBoxSelectTextByMouse() {
+        let control = createTemporaryObject(comboBox, testCase,
+            { editable: true, selectTextByMouse: true, model: [ "Some text" ], width: parent.width })
+        verify(control)
+        waitForRendering(control)
+        control.forceActiveFocus()
+
+        // Position the text cursor at the beginning of the text.
+        mouseClick(control, control.leftPadding, control.height / 2)
+        // Select all of the text.
+        mousePress(control, control.leftPadding, control.height / 2)
+        mouseMove(control, control.leftPadding + control.contentItem.width, control.height / 2)
+        mouseRelease(control, control.leftPadding + control.contentItem.width, control.height / 2)
+        compare(control.contentItem.selectedText, "Some text")
+    }
 }
